// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.eventsourcedentity;

option java_outer_classname = "CounterApi";

message IncreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message DecreaseValue {
  string counter_id = 1 [(kalix.field).id = true];
  int32 value = 2;
}

message ResetValue {
  string counter_id = 1 [(kalix.field).id = true];
}

message GetCounter {
  string counter_id = 1 [(kalix.field).id = true];
}

message CurrentCounter {
  int32 value = 1;
}

service CounterService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: ".domain.Counter"
      type_id: "counter"
      state: ".domain.CounterState"
      events: [".domain.Increased", ".domain.Decreased"]
    }
  };

  rpc Increase (IncreaseValue) returns (google.protobuf.Empty);
  rpc Decrease (DecreaseValue) returns (google.protobuf.Empty);
  rpc Reset (ResetValue) returns (google.protobuf.Empty);
  rpc GetCurrentCounter (GetCounter) returns (CurrentCounter);
}
